# gpt_interface

./: .gitignore  Makefile  README.md  interface.py  pyproject.toml
demos/: chinese_tutor.py  talk.py
examples/: functions.py  image_passing.py  json_mode.py  log_saving.py  manual_message_setting.py  retry.py  system_message.py  talk.py  thinking_time.py
src/gpt_interface/: __init__.py  completions.py  example.py  functions.py  length.py  log.py  rate_limiter.py
src/gpt_interface/calls/: call_gpt.py  modern_model.py
src/gpt_interface/options/: functions.py  models.py
tests/: test_function_dict.py
